test-cases/final-dump/incompatible_generics_2.wybe
def foo(i:?I, ?j:?I) { ?j = i + 1 }
